--- a/01-week-assignment/index.html
+++ b/01-week-assignment/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>About Me - Michael Koval</title>
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -12,13 +13,13 @@
     About Me | <a href="portfolio.html">Portfolio</a>
   </nav>
 
-  <h1>Joe Johnson</h1>
+  <h1>Michael Koval</h1>
 
 <hr>
 
-  <img src="profile_picture.jpg" alt="profile_picture">
   <h2>I ENJOY LIFE AS A DEVELOPER</h2>
-  <p>I'm Joe Johnson, a Developer based in NYC. I have ten years of experience in the graphic design world, specializing in the creation of responsive websites.</p>
+  <p>I'm Michael Koval, a Developer based in NYC. I have ten years of experience in the graphic design world, specializing in the creation of responsive websites.</p>
+  <img src="headshot.jpg" alt="headshot">
 
 <hr>
 
