--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 	</head>
 	<body>
 		<header>
+			<!-- external CSS link -->
 			<div class="container">
-				<h1 class="logo"></h1>
+				<h1 class=""></h1>
+				<!-- NAVIGATION-->
 				<nav>
 					<ul>
 						<li><div class="line"></div><div class="line"></div><div class="line"></div></li>
@@ -26,13 +28,13 @@
 				</nav>
 			</div>
 		</header>
+		<!-- Hero Product Manager Image in a div-->
 		<section id="hero">
 			<div class="container">
 				<h2></h2>
-
-				<!-- Yellow Button -->
-				<!--  <a class="button yellow" href="#">Get it Now</a> -->
 			</div>
+	  <!-- Resume all in one div-->
+
 		</section>
 		<a name="resume"></a>
 		<section id="resume">
@@ -65,6 +67,7 @@
 				<h5>University of Wisconsin - Madison (2008-2012)</h5>
 			</div>
 		</section>
+		<!-- Portfolio wrapped in Div. There are 6 divs within the portfolio div. App Icon and then 3 store buttons are in sepearate divs -->
 		<a name="portfolio"></a>
 		<section id="portfolio">
 			<div class="container">
@@ -104,13 +107,10 @@
 					</ul>
 			</div>
 		</section>
-<!-- Call to action button to sign up -->
-<!-- 		<aside id="bottom-cta">
-			<a class="button blue" href="#">Sign Up Now!</a>
-		</aside>   -->
+		<!-- Footer -->
 		<footer>
 			<a name="contactme"></a>
-			<h4 class="logo">Contact Me</h4>
+			<h4 class="contact">Contact Me</h4>
 			<ul>
 				<li><a href="https://twitter.com/MichaelKoval13"><img src="images/twitter.png" alt="Twitter logo"></a></li>
 				<li><a href="https://www.facebook.com/michael.koval.73"><img src="images/facebook.png" alt="Facebook logo"></a></li>
