hamburger menu fix
hamburger menu fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h1 class=""></h1>
 				<!-- NAVIGATION-->
 				<nav>
-					<ul>
+					<ul id="hamburger">
 						<li><div class="line"></div><div class="line"></div><div class="line"></div></li>
 						<li><a href="#michaelkoval">Michael Koval</a></li>
 						<li><a href="#resume">Resume</a></li>
