--- a/Test/index.html
+++ b/Test/index.html
@@ -19,6 +19,7 @@
 				<nav>
 					<ul id="hamburger">
 						<li><div class="line"></div><div class="line"></div><div class="line"></div></li>
+						<li><a href="#michaelkoval">Michael Koval</a></li>
 						<li><a href="#resume">Resume</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
 						<li><a href="#contactme">Contact Me</a></li>
@@ -29,41 +30,31 @@
 		<!-- Hero Product Manager Image in a div-->
 		<section id="hero">
 			<div class="container">
-				<h2>Michael Koval</h2>
+				<h2></h2>
 			</div>
 	  <!-- Resume all in one div-->
 	</section>
-
-	<div id="slider" >
-		<figure>
-			<img src="images/what-do-product-managers-do.jpg">
-			<img src="images/what_is_a_product_manager_bg.png">
-			<img src="images/product-manager-quotet.jpg">
-			<img src="images/Product-Management-word-cloud.jpg">
-			<img src="images/what_is_a_product_manager_bg.png">
-		</figure>
-	</div>
 			<a id="resume"></a>
 			<div class="container">
 				<h3>Product Manager</h3>
 				<h5>National Fooball League (2015-Present)</h5>
 				<ul>
-					<li>- Lead the digital strategy for NFL Events across platforms including Web, Mobile and CTV.</li>
-					<li>- Worked with a to create the NFL's first stand alone events app including Super Bowl and NFL Draft.</li>
-					<li>- Partnered with Levi Stadium to create the Super Bowl Stadium App for Super Bowl 50. Allowing fans to watch every replay and order merchandise and food to their seats.</li>
+					<li>Lead the digital strategy for NFL Events across platforms including Web, Mobile and CTV.</li>
+					<li>Worked with a to create the NFL's first stand alone events app including Super Bowl and NFL Draft.</li>
+					<li>Partnered with Levi Stadium to create the Super Bowl Stadium App for Super Bowl 50. Allowing fans to watch every replay and order merchandise and food to their seats.</li>
 				</ul>
 				<h3>Associate Product Manager</h3>
 				<h5>National Fooball League (2013-2015)</h5>
 				<ul>
-					<li>- Worked on the NFL Game Pass product within NFL Mobile.</li>
-					<li>- Lead the game day operations for the NFL's live international streaming product, Game Pass.</li>
-					<li>- Lead the doanload able games feature in Game Pass. Completed the product cycle from research and development to providing the product.</li>
-					<li>- Owner our digital streaming rules.</li>
+					<li>Worked on the NFL Game Pass product within NFL Mobile.</li>
+					<li>Lead the game day operations for the NFL's live international streaming product, Game Pass.</li>
+					<li>Lead the doanload able games feature in Game Pass. Completed the product cycle from research and development to providing the product.</li>
+					<li>Owner our digital streaming rules.</li>
 				</ul>
 				<h3>Digital Media Coordinator</h3>
 				<h5>National Fooball League (2012-2013)</h5>
 				<ul>
-					<li>-Worked in the NFL Digital Media across different teams.</li>
+					<li>Worked in the NFL Digital Media across different teams.</li>
 				</ul>
 				<h3>Education</h3>
 				<h5>University of Wisconsin - Madison (2008-2012)</h5>
@@ -106,33 +97,20 @@
 								<a href="https://play.google.com/store/apps/details?id=com.nfl.mobile.draft&hl=en"><img src="images/googlePlayBtn.png" alt="Road to 50 Google Play"></a>
 							</div>
 						</li>
-						<li>
-							<div class="container">
-								<img src="images/game_pass.png" alt="Game Pass">
-							</div>
-							<div class="container">
-								<a href="https://www.microsoft.com/en-sg/store/apps/nfl-game-pass/9wzdncrdl7b9"><img src="images/windowsStoreBtn.png" alt="Game Pass Windows"></a>
-								<a href="https://itunes.apple.com/gb/app/nfl-game-pass/id459244446?mt=8"><img src="images/appleStoreBtn.png" alt="Game Pass iOS"></a>
-								<a href="https://play.google.com/store/apps/details?id=com.neulion.android.nfl.gamepass&hl=en"><img src="images/googlePlayBtn.png" alt="Game Pass Google Play"></a>
-							</div>
-						</li>
 					</ul>
 			</div>
 		</section>
 		<!-- Footer -->
 		<footer>
 			<a name="contactme"></a>
-			<div class="container">
-				<ul>
-					<li class="contact">Contact Me:</li>
-				<div class="containter">
-					<li><a href="https://twitter.com/MichaelKoval13"><img src="images/twitter.png" alt="Twitter logo"></a></li>
-					<li><a href="https://www.facebook.com/michael.koval.73"><img src="images/facebook.png" alt="Facebook logo"></a></li>
-					<li><a href="https://www.instagram.com/michaelgkoval/"><img src="images/instagram.png" alt="Instagram logo"></a></li>
-					<li><a href="https://www.linkedin.com/in/michael-koval-441a2935"><img src="images/linkedin.png" alt="LinkedIn logo"></a></li>
-				</div>
-				</ul>
-			</div>
+			<h4 class="contact">Contact Me</h4>
+			<ul>
+				<li><a href="https://twitter.com/MichaelKoval13"><img src="images/twitter.png" alt="Twitter logo"></a></li>
+				<li><a href="https://www.facebook.com/michael.koval.73"><img src="images/facebook.png" alt="Facebook logo"></a></li>
+				<li><a href="https://www.instagram.com/michaelgkoval/"><img src="images/instagram.png" alt="Instagram logo"></a></li>
+				<li><a href="https://www.linkedin.com/in/michael-koval-441a2935"><img src="images/linkedin.png" alt="LinkedIn logo"></a></li>
+			</ul>
+			<p class="copyright">Michael Koval</p>
 		</footer>
 	</body>
 </html>
