--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<img src="images/what_is_a_product_manager_bg.png">
 			<img src="images/product-manager-quotet.jpg">
 			<img src="images/Product-Management-word-cloud.jpg">
-			<img src="images/what_is_a_product_manager_bg.png">
+			<img src="images/artofproductmanagement.jpg">
 		</figure>
 	</div>
 			<a id="resume"></a>
