--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<img src="images/artofproductmanagement.jpg">
 		</figure>
 	</div>
-			<a id="resume"></a>
+   <a id="resume"></a>
 			<div class="container">
 				<h3>Product Manager</h3>
 				<h5>National Fooball League (2015-Present)</h5>
@@ -55,15 +55,15 @@
 				<h3>Associate Product Manager</h3>
 				<h5>National Fooball League (2013-2015)</h5>
 				<ul>
-					<li>- Worked on the NFL Game Pass product within NFL Mobile.</li>
-					<li>- Lead the game day operations for the NFL's live international streaming product, Game Pass.</li>
-					<li>- Lead the doanload able games feature in Game Pass. Completed the product cycle from research and development to providing the product.</li>
-					<li>- Owner our digital streaming rules.</li>
+					<li>- Member of the NFL's Digital Subscription Products team, focused on the NFL's international product streaming product NFL Game Pass.</li>
+					<li>- Lead the game day operations for Game Pass video streaming products. Managed all aspects of the operation including planning, hiring and support.</li>
+					<li>- Responsibile for making sure digital streaming rights were projected and working with other teams to make sure they fully understand and protect the digital streaming products. </li>
+					<li>- Lead the NFL Game Pass mobile app redsign on iOS, Android and Windows.</li>
 				</ul>
 				<h3>Digital Media Coordinator</h3>
 				<h5>National Fooball League (2012-2013)</h5>
 				<ul>
-					<li>-Worked in the NFL Digital Media across different teams.</li>
+					<li>-Worked in the NFL Digital Media department aiding in different projects across teams.</li>
 				</ul>
 				<h3>Education</h3>
 				<h5>University of Wisconsin - Madison (2008-2012)</h5>
