--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 				<h3>Product Manager</h3>
 				<h5>National Fooball League (2015-Present)</h5>
 				<ul>
-					<li>- Lead the digital strategy for NFL Events across platforms including Web, Mobile and CTV.</li>
-					<li>- Worked with a to create the NFL's first stand alone events app including Super Bowl and NFL Draft.</li>
+					<li>- Currently lead the digital strategy for NFL Events across platforms including Web, iOS, Android, Windows and CTV.</li>
 					<li>- Partnered with Levi Stadium to create the Super Bowl Stadium App for Super Bowl 50. Allowing fans to watch every replay and order merchandise and food to their seats.</li>
+					<li>- Worked with a to create the NFL's first stand alone events app including Super Bowl and NFL Draft.</li>
 				</ul>
 				<h3>Associate Product Manager</h3>
 				<h5>National Fooball League (2013-2015)</h5>
