--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<ul>
 					<li>- Currently lead the digital strategy for NFL Events across platforms including Web, iOS, Android, Windows and CTV.</li>
 					<li>- Partnered with Levi Stadium to create the Super Bowl Stadium App for Super Bowl 50. Allowing fans to watch every replay and order merchandise and food to their seats.</li>
-					<li>- Worked with a to create the NFL's first stand alone events app including Super Bowl and NFL Draft.</li>
+					<li>- Led the project for the NFL's first app dedicated to fans attending an NFL event including Super Bowl and NFL Draft.</li>
 				</ul>
 				<h3>Associate Product Manager</h3>
 				<h5>National Fooball League (2013-2015)</h5>
